--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ main {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 20%;
+  width: 25%;
   margin-top: -28%;
   height: 100%;
   cursor: pointer;
@@ -182,10 +182,9 @@ main {
   display: inline-block;
   background-color: rgba(255, 255, 255, 1);
   border: 2px solid #e5e5e5;
-  width: 70%;
-  height: 90%;
+  width: 60%;
+  height: 100%;
   border-radius: 25px;
-  margin: auto;
   overflow: hidden;
   cursor: pointer;
   transition: 0.2s;
@@ -232,6 +231,7 @@ main {
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  margin-top: 3%;
 }
 
 ul {
@@ -334,6 +334,7 @@ ul {
   transition: 0.2s;
   cursor: pointer;
   margin: auto;
+  margin-bottom: 10%;
   text-align: center;
 }
 
@@ -488,7 +489,8 @@ input[type=submit] {
   background: #36b37f;
   width: 129px;
   height: 48px;
-  margin-left: -210px;
+  float: left;
+  margin-left: 40px;
 }
 
 input[type=submit]:hover {
@@ -533,6 +535,7 @@ p {
 
   .grid-item {
     margin-left: 10%;
+    width: 70%;
   }
 
   .flex-container {
