--- a/index.css
+++ b/index.css
@@ -242,17 +242,17 @@ ul {
 
 .content-tags {
   border-radius: 4px;
-  margin-top: 13px;
+  margin-top: 12px;
   margin-bottom: 10px;
   background: rgba(235, 240, 238, 1);
   padding-top: 2%;
   padding-right: 3%;
   padding-bottom: 2%;
-  padding-left: 3%;
+  padding-left: 1px;
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
-  line-height: 16px;
+  line-height: 14px;
   letter-spacing: 0.03em;
   text-align: left;
   width: 15%;
@@ -609,7 +609,7 @@ p {
 
   .line2 {
     width: 100%;
-    height: 9px;
+    height: 5px;
     background-color: grey;
     margin-top: 0%;
     border-radius: 2px;
