--- a/index.css
+++ b/index.css
@@ -403,14 +403,14 @@ ul {
   background-color: #ffff;
   border-radius: 0.3rem;
   height: 1.5rem;
-  width: 10%;
+  width: 20%;
   padding-top: 2%;
   padding-right: 3%;
   padding-bottom: 2%;
   padding-left: 3%;
   float: left;
   letter-spacing: 0.01em;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-left: 3%;
   margin-bottom: 7%;
 }
@@ -529,9 +529,10 @@ p {
 @media only screen and (min-width: 1100px) {
   .works {
     display: flex;
+    height: auto;
     flex-direction: row;
-    flex-wrap: nowrap;
     width: 100%;
+    flex-wrap: nowrap;
   }
 
   .grid {
