--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ main {
   background-repeat: no-repeat;
   background-size: contain;
   padding-top: 10%;
+  margin-top: -4%;
 }
 
 .welcome {
@@ -532,12 +533,12 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 20%;
+    width: 30%;
   }
 
   .link {
     display: inline-block;
-    width: 100px;
+    width: 80px;
     margin: auto;
     align-items: center;
     text-align: center;
