--- a/index.css
+++ b/index.css
@@ -265,17 +265,11 @@ ul {
   margin-top: 12px;
   margin-bottom: 10px;
   background: rgba(235, 240, 238, 1);
-  padding-top: 2%;
-  padding-right: 3%;
-  padding-bottom: 2%;
-  padding-left: 1px;
+  padding: 2%;
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
-  line-height: 14px;
   letter-spacing: 0.03em;
-  text-align: left;
-  height: 1.5rem;
 }
 
 .see-projects {
@@ -326,7 +320,7 @@ ul {
   justify-content: center;
   color: #172b4d;
   padding: 20px;
-  margin-bottom: 40px;
+  margin: auto;
   width: 90%;
 }
 
@@ -367,16 +361,15 @@ ul {
 .flex-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
-  width: 70%;
+  width: 62%;
   height: 90%;
   border-radius: 10px;
-  margin: auto;
   overflow: hidden;
   cursor: pointer;
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10%;
+  margin: auto auto 5%;
 }
 
 .attribute-ellip {
@@ -420,11 +413,11 @@ ul {
   background-color: #ffff;
   border-radius: 0.3rem;
   height: 1.5rem;
-  width: 20%;
+  width: 16%;
   padding-top: 2%;
   padding-right: 3%;
   padding-bottom: 2%;
-  padding-left: 3%;
+  padding-left: 8%;
   float: left;
   letter-spacing: 0.01em;
   justify-content: space-between;
@@ -589,7 +582,7 @@ a:hover {
     margin: auto;
   }
 
-  .links {
+  a {
     display: inline-block;
     position: relative;
     height: 2px;
@@ -598,6 +591,7 @@ a:hover {
     margin: auto;
     border-radius: 1px;
     cursor: pointer;
+    text-decoration: none;
   }
 
   .button {
@@ -619,7 +613,7 @@ a:hover {
   }
 
   .grid-item {
-    margin-left: 10%;
+    margin-left: 6%;
     width: 70%;
   }
 
@@ -627,11 +621,12 @@ a:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 80%;
   }
 
   .flex-box {
     margin: -20% 3% 5%;
+    width: 23%;
+    margin-right: 0.4%;
   }
 
   .contact {
@@ -790,10 +785,7 @@ a:hover {
     margin-top: 12px;
     margin-bottom: 10px;
     background: rgba(235, 240, 238, 1);
-    padding-top: 2%;
-    padding-right: 3%;
-    padding-bottom: 2%;
-    padding-left: 1px;
+    padding: 2%;
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
@@ -801,6 +793,10 @@ a:hover {
     letter-spacing: 0.03em;
     text-align: left;
     height: 1.5rem;
+  }
+
+  .about2 {
+    background-size: 6%;
   }
 
   .see-projects {
@@ -857,7 +853,7 @@ a:hover {
     width: 20%;
     height: 10px;
     background-color: rgb(22, 21, 21);
-    margin-top: 0%;
+    margin-top: -17%;
     border-radius: 5px;
     transition: 2s;
     cursor: pointer;
