--- a/index.css
+++ b/index.css
@@ -281,7 +281,7 @@ ul {
 
 .content-btn {
   width: 20%;
-  margin-top: 10%;
+  margin-top: 8%;
   margin-bottom: 7%;
   border-radius: 4px;
   padding: 2%;
@@ -447,7 +447,7 @@ ul {
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin: 4px auto;
+  margin: 4% auto 2%;
   padding-left: 5px;
 }
 
@@ -685,6 +685,10 @@ a:hover {
     list-style-type: none;
   }
 
+  .socials-lists-item {
+    width: 20%;
+  }
+
   .socials-lists-item-after {
     width: 20%;
     height: 100%;
@@ -722,6 +726,10 @@ a:hover {
 
   .heading {
     margin-top: 6%;
+  }
+
+  .subheading {
+    margin-top: -2%;
   }
 
   .summary {
