--- a/index.css
+++ b/index.css
@@ -12,7 +12,14 @@
   margin-top: 3%;
 }
 
+.welcome {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
+
 .link {
+  position: relative;
   height: 2px;
   width: 20px;
   background-color: black;
@@ -21,23 +28,21 @@
   cursor: pointer;
 }
 
+.links {
+  display: none;
+}
+
 .button {
   cursor: pointer;
 }
 
 main {
   text-align: center;
-  background: url("./image/header.svg");
+  background: url("./image/header-mobile.svg");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: contain;
   padding-top: 10%;
-}
-
-.welcome {
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
 }
 
 .intro {
@@ -58,8 +63,8 @@ main {
 .subheading {
   color: #36b37e;
   font-size: 40px;
-  margin-top: 2%;
   width: 70%;
+  margin-top: 2%;
 }
 
 .summary {
@@ -90,10 +95,11 @@ main {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 70%;
-  margin-top: 15%;
+  width: 50%;
+  margin-top: 1%;
   height: 100%;
-  margin-bottom: 10%;
+  cursor: pointer;
+  margin-bottom: 0%;
 }
 
 .icon {
@@ -116,32 +122,37 @@ main {
 .whatsappsize {
   width: 30px;
   height: 30px;
+  cursor: pointer;
 }
 
 .linkedsize {
   width: 27px;
   height: 30px;
+  cursor: pointer;
 }
 
 .facebooksize {
   width: 30px;
   height: 40px;
+  cursor: pointer;
 }
 
 .telegramsize {
   width: 25px;
   height: 30px;
+  cursor: pointer;
 }
 
 .githubsize {
   width: 25px;
   height: 25px;
+  cursor: pointer;
 }
 
 .vector-img {
   margin-top: 10%;
   cursor: pointer;
-  width: 7%;
+  width: 2%;
 }
 
 .vector-img:hover {
@@ -154,44 +165,46 @@ main {
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
-  margin: 12% 25% 3%;
+  margin: 30% 25% 3%;
   text-align: center;
   justify-content: center;
   width: 55%;
 }
 
 .line {
-  width: 6%;
+  width: 10%;
   height: 9px;
   background-color: rgba(54, 179, 127, 1);
   display: inline-block;
   position: relative;
-  margin: 2% 40%;
-  margin-bottom: 15px;
-  margin-top: 2px;
+  margin: 3% 45%;
+  margin-bottom: 3rem;
   border-radius: 2px;
 }
 
 .works {
   background-color: rgba(255, 255, 255, 1);
-  display: grid;
-  grid-template-rows: auto auto auto auto auto auto;
-  row-gap: 45px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .grid {
   width: auto;
   height: auto;
   align-items: start;
+  margin-top: 5%;
 }
 
 .grid-item {
+  display: inline-block;
   background-color: rgba(255, 255, 255, 1);
-  border: 2px solid #e5e5e5;
-  width: 90%;
-  height: 90%;
-  border-radius: 25px;
+  border: 6px solid #e5e5e5;
+  width: 60%;
+  height: 100%;
   margin: auto;
+  border-radius: 25px;
   overflow: hidden;
   cursor: pointer;
   transition: 0.2s;
@@ -219,7 +232,7 @@ main {
 .card-header {
   display: block;
   font-size: 140%;
-  width: 80%;
+  width: 100%;
   height: 8%;
   font-weight: 600;
   color: rgb(58, 74, 66);
@@ -235,9 +248,10 @@ main {
   width: 96%;
   flex-wrap: wrap;
   align-content: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
+  margin-top: 10%;
 }
 
 ul {
@@ -248,33 +262,26 @@ ul {
 
 .content-tags {
   border-radius: 4px;
-  margin-top: 13px;
+  margin-top: 12px;
   margin-bottom: 10px;
   background: rgba(235, 240, 238, 1);
-  padding-top: 2%;
-  padding-right: 3%;
-  padding-bottom: 2%;
-  padding-left: 3%;
+  padding: 2%;
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
-  line-height: 16px;
   letter-spacing: 0.03em;
-  text-align: left;
-  width: 15%;
-  height: 1.5rem;
 }
 
 .see-projects {
   text-decoration: none;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 8px;
   border: 0;
 }
 
 .content-btn {
   width: 20%;
-  margin-top: 10%;
+  margin-top: 7%;
   margin-bottom: 7%;
   border-radius: 4px;
   padding: 2%;
@@ -287,8 +294,8 @@ ul {
   background: url("./image/about me 2.svg");
   background-repeat: no-repeat;
   background-position-x: right;
-  background-size: 4rem;
-  padding-top: 2%;
+  background-size: 7%;
+  padding: 8px 8px;
 }
 
 .about-header {
@@ -313,15 +320,17 @@ ul {
   justify-content: center;
   color: #172b4d;
   padding: 20px;
-  margin-bottom: 40px;
+  margin: auto;
+  width: 90%;
 }
 
 .about2 {
   background: url("./image/about me 1.svg");
   background-repeat: no-repeat;
   background-position-x: left;
-  background-size: 4rem;
-  padding: 8% 6%;
+  background-size: 9%;
+  margin-top: -63px;
+  padding: 10% 8%;
 }
 
 .about-btn {
@@ -336,31 +345,31 @@ ul {
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin: 2rem auto 1rem;
+  margin: auto;
+  margin-bottom: 10%;
   text-align: center;
 }
 
 .flex-container {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
-  flex-direction: column;
-  column-gap: 45%;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .flex-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
-  width: 90%;
-  height: 20rem;
+  width: 62%;
+  height: 90%;
   border-radius: 10px;
-  margin: auto;
   overflow: hidden;
   cursor: pointer;
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10%;
+  margin: auto auto 5%;
 }
 
 .attribute-ellip {
@@ -386,7 +395,7 @@ ul {
 .attribute-title {
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 30px;
   line-height: 32px;
   text-align: center;
   color: rgba(52, 69, 99, 1);
@@ -404,14 +413,14 @@ ul {
   background-color: #ffff;
   border-radius: 0.3rem;
   height: 1.5rem;
-  width: 10%;
+  width: 20%;
   padding-top: 2%;
-  padding-right: 3%;
+  padding-right: 4%;
   padding-bottom: 2%;
-  padding-left: 3%;
+  padding-left: 5%;
   float: left;
   letter-spacing: 0.01em;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-left: 3%;
   margin-bottom: 7%;
 }
@@ -428,8 +437,8 @@ ul {
   width: 60%;
   height: 363px;
   font-style: normal;
-  text-align: center;
-  justify-content: center;
+  text-align: left;
+  justify-content: left;
   padding: 20px;
   font-weight: bold;
   font-size: 40px;
@@ -438,8 +447,14 @@ ul {
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin: 24px auto;
-  margin-bottom: 30px;
+  margin: 4% auto 2%;
+  padding-left: 5px;
+}
+
+.form-container {
+  position: sticky;
+  width: 80%;
+  margin: auto;
 }
 
 input[type=text] {
@@ -451,12 +466,6 @@ input[type=text] {
   margin-top: 18px;
   margin-bottom: 12px;
   resize: vertical;
-}
-
-.form-container {
-  border-radius: 5px;
-  background-color: white;
-  padding: 20px;
 }
 
 input[type=email] {
@@ -498,33 +507,30 @@ input[type=submit]:hover {
   background-color: #45a049;
 }
 
-.contact-img {
-  position: static;
-  background: url("./image/contact.svg");
-  background-repeat: no-repeat;
-  background-position-x: right;
-  background-size: 4rem;
-  padding: 8% 6%;
-}
-
 .socials-lists-item-after {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 50%;
-  margin: auto;
-  height: 100%;
+  width: 40%;
 }
 
 p {
-  margin-top: 20px;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 32px;
   text-align: center;
-  color: rgba(66, 82, 110, 1);
-  margin-bottom: 30%;
+  color: rgb(66, 86, 119);
+}
+
+.text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: rgb(66, 86, 119);
+  padding-bottom: 40%;
 }
 
 a:link {
@@ -543,13 +549,204 @@ a:hover {
 }
 
 .line2 {
-  width: 20%;
-  height: 9px;
-  background-color: #171a17;
-  display: inline-block;
-  position: relative;
-  margin: 2% 40%;
-  margin-bottom: 12px;
-  margin-top: 2px;
-  border-radius: 4px;
+  width: 30%;
+  height: 10px;
+  background-color: rgb(22, 21, 21);
+  margin-top: 0%;
+  border-radius: 5px;
+  transition: 2s;
+  cursor: pointer;
+  margin-bottom: 2%;
+}
+
+@media only screen and (min-width: 1100px) {
+  .welcome {
+    display: none;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+  }
+
+  .navbar {
+    width: 20%;
+    margin-top: 5px;
+  }
+
+  .link {
+    display: inline-block;
+    width: 70px;
+    cursor: pointer;
+    margin: auto;
+  }
+
+  .links {
+    display: inline-block;
+    position: relative;
+    height: 2px;
+    width: 120px;
+    background-color: white;
+    margin: auto;
+    border-radius: 1px;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+  .button {
+    cursor: pointer;
+  }
+
+  .works {
+    height: auto;
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+
+  .grid-item {
+    margin-left: 6%;
+    width: 70%;
+  }
+
+  .flex-container {
+    flex-wrap: nowrap;
+  }
+
+  .flex-box {
+    margin: -20% 3% 5%;
+    width: 23%;
+    margin-right: 0.4%;
+  }
+
+  .contact {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 80%;
+  }
+
+  .contact-text {
+    margin-left: 15%;
+    width: 30%;
+    padding: 10px;
+  }
+
+  .desktop-images {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .desktop1 {
+    position: relative;
+    background: url("./image/desktop1.svg");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 22%;
+    margin-left: 140%;
+    margin-top: 8%;
+    padding: 40% 86%;
+  }
+
+  .desktop2 {
+    background: url("./image/desktop2.svg");
+    background-repeat: no-repeat;
+    background-position-x: left;
+    background-size: 10%;
+    margin-left: -20%;
+    padding-top: 30%;
+    padding-left: 5px;
+  }
+
+  .desktop3 {
+    background: url("./image/desktop3.svg");
+    background-repeat: no-repeat;
+    background-position-x: left;
+    background-size: 9%;
+    margin-left: -90%;
+    margin-top: -40%;
+    padding-top: 40%;
+    padding-left: 10%;
+  }
+
+  .line3 {
+    width: 100%;
+    height: 2px;
+    background-color: grey;
+    margin-top: 40%;
+    border-radius: 2px;
+    transition: 2s;
+    cursor: pointer;
+  }
+
+  .line3:hover {
+    background-color: rgb(18, 99, 238);
+  }
+
+  .socials-list-after {
+    list-style-type: none;
+  }
+
+  .socials-lists-item {
+    width: 20%;
+  }
+
+  .socials-lists-item-after {
+    width: 20%;
+    height: 100%;
+    cursor: pointer;
+    margin-top: -28%;
+    margin-bottom: 0%;
+  }
+
+  input[type=submit] {
+    float: left;
+    margin-left: 40px;
+  }
+
+  .grid-item:hover {
+    transform: translateY(-0.5%);
+  }
+
+  main {
+    text-align: center;
+    background: url("./image/header.svg");
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding-top: 10%;
+  }
+
+  .content-tags {
+    text-align: left;
+    height: 1.5rem;
+  }
+
+  .about2 {
+    background-size: 6%;
+  }
+
+  .heading {
+    margin-top: 6%;
+  }
+
+  .subheading {
+    margin-top: -3%;
+  }
+
+  .summary {
+    line-height: 30px;
+    margin-top: 0%;
+    width: 34%;
+  }
+
+  .line {
+    display: none;
+  }
+
+  .text {
+    display: none;
+  }
+
+  .line2 {
+    display: none;
+  }
 }
