--- a/index.css
+++ b/index.css
@@ -93,7 +93,6 @@ main {
 
 .socials-lists-item {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
   width: 50%;
   margin-top: 1%;
@@ -103,7 +102,7 @@ main {
 }
 
 .icon {
-  width: 20px;
+  width: 90px;
   padding: 0;
   margin: 0;
   color: #505f79;
@@ -225,8 +224,7 @@ main {
 .card-img {
   display: block;
   width: 100%;
-  height: 70%;
-  object-fit: cover;
+  height: 50%;
 }
 
 .card-header {
@@ -285,7 +283,7 @@ ul {
   padding: 2%;
   background: #36b37f;
   align-items: center;
-  color: #ffff;
+  color: rgb(255, 255, 255);
 }
 
 .about {
@@ -337,7 +335,7 @@ ul {
   height: 2rem;
   padding: 1rem 1rem;
   font-size: 1.3rem;
-  color: #ffff;
+  color: #dbdbdb;
   background-color: #36b37f;
   border: none;
   border-radius: 0.4rem;
@@ -376,7 +374,7 @@ ul {
   width: 5rem;
   height: 5rem;
   border-radius: 20rem;
-  background-color: #ffff;
+  background-color: rgb(255, 255, 255);
   align-items: center;
 }
 
@@ -408,7 +406,7 @@ ul {
   flex-wrap: wrap;
   text-align: center;
   color: #60c095;
-  background-color: #ffff;
+  background-color: rgb(255, 255, 255);
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 20%;
@@ -424,7 +422,7 @@ ul {
 }
 
 .contact {
-  background-color: #ffff;
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -450,7 +448,6 @@ ul {
 }
 
 .form-container {
-  position: sticky;
   width: 80%;
   margin: auto;
 }
@@ -463,7 +460,6 @@ input[type=text] {
   box-sizing: border-box;
   margin-top: 18px;
   margin-bottom: 12px;
-  resize: vertical;
 }
 
 input[type=email] {
@@ -474,7 +470,6 @@ input[type=email] {
   box-sizing: border-box;
   margin-top: 18px;
   margin-bottom: 12px;
-  resize: vertical;
 }
 
 textarea {
@@ -486,7 +481,6 @@ textarea {
   box-sizing: border-box;
   margin-top: 18px;
   margin-bottom: 12px;
-  resize: vertical;
 }
 
 input[type=submit] {
@@ -507,9 +501,8 @@ input[type=submit]:hover {
 
 .socials-lists-item-after {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  width: 40%;
+  width: 70%;
 }
 
 p {
