--- a/index.css
+++ b/index.css
@@ -225,7 +225,7 @@ main {
 .card-img {
   display: block;
   width: 100%;
-  height: 55%;
+  height: 50%;
 }
 
 .card-header {
@@ -284,7 +284,7 @@ ul {
 .content-btn {
   border-radius: 4px;
   padding: 2%;
-  margin: 10% 30%;
+  margin: 10% 30% 5%;
   background: #36b37f;
   align-items: center;
 }
