--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
   margin-top: 3%;
 }
 
-.welcome {
+#welcome {
   font-weight: bold;
   color: black;
   text-decoration: none;
@@ -21,26 +21,32 @@
 .menuBtn {
   position: relative;
   height: 5%;
-  width: 5%;
-  background-color: black;
+  display: block;
+  width: 25%;
   margin: auto;
   border-radius: 1px;
   cursor: pointer;
-  left: 35%;
+  left: 40%;
 }
 
-.links {
-  display: block;
-  width: 15%;
+#links {
+  display: none;
+  width: 26%;
   height: 10%;
-  position: fixed;
+  position: absolute;
   top: 2%;
-  right: -200px;
+  right: 0;
   transition: 0.5s;
   color: #080808;
-  background: #fff;
-  padding: 7px 5px 7px 15px;
-  margin: 45px 20px;
+  margin: 40px 10px;
+  text-decoration: none;
+}
+
+.navbar a {
+  padding: 10px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
 }
 
 main {
@@ -575,11 +581,8 @@ a:hover {
 }
 
 @media only screen and (min-width: 1100px) {
-  .welcome {
+  #welcome {
     display: none;
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
   }
 
   .navbar {
@@ -591,8 +594,8 @@ a:hover {
     display: none;
   }
 
-  .links {
-    display: inline-block;
+  #links {
+    display: flex;
     position: relative;
     height: 2px;
     width: 220px;
