--- a/index.css
+++ b/index.css
@@ -4,49 +4,62 @@
   font-family: ubuntu, sans-serif;
 }
 
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 90%;
-  margin-top: 3%;
+.container {
+  background-color: #fff;
 }
 
-#welcome {
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  max-width: 60rem;
+  margin: 0 auto;
+  padding: 0 16px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.nav-toggle {
+  display: block;
+  position: absolute;
+  top: 2px;
+  right: 40px;
+  cursor: pointer;
+}
+
+.open {
+  height: 20vh;
+}
+
+.welcome {
   font-weight: bold;
   color: black;
   text-decoration: none;
+  background-color: #45a049;
 }
 
-.menuBtn {
-  position: relative;
-  height: 5%;
+nav {
+  width: 100%;
+  overflow: hidden;
+  transition: 250ms;
+  height: 0;
+}
+
+li {
   display: block;
-  width: 25%;
-  margin: auto;
-  border-radius: 1px;
-  cursor: pointer;
-  left: 40%;
+  text-align: center;
+  padding: 10px 0;
 }
 
-#links {
+li a {
+  font-size: 13px;
+}
+
+.links {
+  padding: 0;
+}
+
+.hidden {
   display: none;
-  width: 26%;
-  height: 10%;
-  position: absolute;
-  top: 2%;
-  right: 0;
-  transition: 0.5s;
-  color: #080808;
-  margin: 40px 10px;
-  text-decoration: none;
-}
-
-.navbar a {
-  padding: 10px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
 }
 
 main {
@@ -581,29 +594,39 @@ a:hover {
 }
 
 @media only screen and (min-width: 1100px) {
-  #welcome {
-    display: none;
-  }
-
   .navbar {
-    width: 20%;
-    margin-top: 5px;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 50rem;
+    margin: 0 auto;
+    padding: 0 40px;
   }
 
-  .menuBtn {
+  li {
+    display: inline-block;
+  }
+
+  .nav-toggle {
     display: none;
   }
 
-  #links {
-    display: flex;
-    position: relative;
-    height: 2px;
-    width: 220px;
-    background-color: white;
-    margin: auto;
-    border-radius: 1px;
-    cursor: pointer;
-    text-decoration: none;
+  .open {
+    height: 20vh;
+  }
+
+  nav {
+    width: 200%;
+    height: auto;
+  }
+
+  #welcome {
+    padding: 0 20%;
+  }
+
+  li a {
+    padding: 0 10px;
   }
 
   .button {
